--- a/blocks/section/__narrow/section__narrow.css
+++ b/blocks/section/__narrow/section__narrow.css
@@ -1,5 +1,7 @@
 .section__narrow {
     box-sizing: border-box;
+    margin: 0 auto;
+    padding: 28px 48px 24px;
     width: calc(100% - 100px*2);
 }
 
