--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -1,4 +1,4 @@
-.place__paragraph{
+.places__paragraph{
     margin: 0 auto;
     margin-bottom: 26px;
     font-size: 18px;
@@ -8,19 +8,19 @@
     width: 100%;
   }
 
-  .place__paragraph:last-of-type {
+  .places__paragraph:last-of-type {
       margin: 0;
   }
 
   @media screen and (max-width: 1023px){
-    .place__paragraph {
+    .places__paragraph {
     font-size: 16px;
     line-height: 26.08px;
 }
   }
   
   @media screen and (max-width: 767px){
-    .place__paragraph {
+    .places__paragraph {
     font-size: 16px;
     line-height: 26.08px;
 }
