--- a/blocks/places/__description/places__description.css
+++ b/blocks/places/__description/places__description.css
@@ -1,10 +1,10 @@
-.place__description {
+.places__description {
     min-width: 240px;
     grid-area: text;
   }
 
   @media screen and (max-width: 767px){
-    .place__description {
+    .places__description {
     margin-left: 16px;
     margin-right: 16px;
 }
