--- a/blocks/places/__link/places__link.css
+++ b/blocks/places/__link/places__link.css
@@ -1,11 +1,8 @@
-.place__link_hover {
+  .places__link {
+    width: 100%;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
     line-height: 22px;
     color:#FFFFFF;
-  }
-
-  .place__link_hover:hover {
-    opacity: 0.8;
   }
