--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -1,4 +1,4 @@
-.place__title {
+.places__title {
     grid-area: title;
     margin: 0;
     font-weight: 900;
@@ -8,7 +8,7 @@
   }
 
   @media screen and (max-width: 767px){
-    .place__title {
+    .places__title {
     font-size: 32px;
     line-height: 35px;
     margin-left: 16px;
