--- a/blocks/section/_narrow/section_narrow.css
+++ b/blocks/section/_narrow/section_narrow.css
@@ -1,24 +1,22 @@
-.section__narrow {
+.section_narrow {
     box-sizing: border-box;
-    margin: 0 auto;
-    padding: 28px 48px 24px;
     width: calc(100% - 100px*2);
 }
 
 @media screen and (max-width: 1279px){
-    .section__narrow {
+    .section_narrow {
         width: 100%;
     }
   }
 
 @media screen and (max-width: 1023px){
-    .section__narrow {
+    .section_narrow {
         width: 100%;
     }
   }
     
   @media screen and (max-width: 767px){
-    .section__narrow {
+    .section_narrow {
         width: 100%;
     }
   }
