--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,5 @@
 @import url(../vendor/normalize.css);
+@import url(../vendor/fonts.css);
 @import url(../blocks/root/root.css);
 @import url(../blocks/section/section.css);
 @import url(../blocks/section/_narrow/section_narrow.css);
