--- a/blocks/places/__gallery/places__gallery.css
+++ b/blocks/places/__gallery/places__gallery.css
@@ -5,8 +5,13 @@
   .places__gallery {
     padding:0;
   }
+}
 
 @media (max-width: 767px) {
     .places__gallery {
       padding:0;
     }
+  }
+
+
+    
