--- a/blocks/place/__gallery/place__gallery.css
+++ b/blocks/place/__gallery/place__gallery.css
@@ -1,14 +1,14 @@
-.places__gallery {
+.place__gallery {
     padding-top: 0;
 }
 @media (max-width: 1027px) {
-  .places__gallery {
+  .place__gallery {
     padding:0;
   }
 }
 
 @media (max-width: 767px) {
-    .places__gallery {
+    .place__gallery {
       padding:0;
     }
   }
