--- a/blocks/place/__item/place__item.css
+++ b/blocks/place/__item/place__item.css
@@ -1,4 +1,4 @@
-.places__item {
+.place__item {
     margin-bottom: 80px;
     list-style: none;
     display: grid;
@@ -11,21 +11,21 @@
 
 
 @media screen and (max-width: 1279px){
-    .places__item {
+    .place__item {
     gap: 48px 32px;
 
 }
   }
   
   @media screen and (max-width: 1023px){
-    .places__item {
+    .place__item {
     margin-bottom: 73px;
     gap: 48px 28px;
 
 }
   }
 @media screen and (max-width: 767px){
-    .places__item {
+    .place__item {
     margin-bottom: 50px;
     grid-template-columns: 1fr;
     gap: 32px 32px;
