--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -5,14 +5,25 @@
     text-align: center;
     margin: auto;
     margin-top: 32px;
-    max-width: 640px;
+    max-width: calc(100% - 320px*2);
+}
+
+@media screen and (max-width: 1279px){
+  .lead__subtitle {
+    max-width: calc(100% - 192px*2);
+  }
+}
+
+@media screen and (max-width: 1023px){
+  .lead__subtitle {
+    max-width: calc(100% - 64px*2);
+  }
 }
 
 @media screen and (max-width: 767px){
     .lead__subtitle {
       margin-top: 16px;
-      margin-left: 16px;
-      margin-right: 16px;
+      max-width: calc(100% - 16px*2);
       font-size: 16px;
       line-height: 20px;
     }
