--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -7,11 +7,22 @@
     margin: auto;
 }
 
+@media screen and (max-width: 1279px){
+  .lead__title {  
+    max-width: calc(100% - 152px*2);
+  }
+}
+
+@media screen and (max-width: 1023px){
+  .lead__title {
+    max-width: calc(100% - 24px*2);
+  }
+}
+
 @media screen and (max-width: 767px){
     .lead__title {
       font-size: 40px;
       line-height: 44px;
-      margin-left: 18px;
-      margin-right: 18px;
+      max-width: calc(100% - 18px*2)
     }
   }
