--- a/blocks/place/__link/_hover/place__link_hover.css
+++ b/blocks/place/__link/_hover/place__link_hover.css
@@ -1,5 +1,4 @@
-  .places__link {
-    width: 100%;
+.place__link_hover {
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
@@ -7,6 +6,6 @@
     color:#FFFFFF;
   }
 
-  .places__link:hover:nth-of-type(3) {
-  opacity: 0.8;
+  .place__link_hover:hover {
+    opacity: 0.8;
   }
