--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,4 +1,4 @@
-.places__title {
+.place__title {
     grid-area: title;
     margin: 0;
     font-weight: 900;
@@ -9,7 +9,7 @@
 
   
   @media screen and (max-width: 767px){
-    .places__title {
+    .place__title {
     font-size: 32px;
     line-height: 35px;
     margin-left: 16px;
