--- a/blocks/footer/__row-link/footer__row-link.css
+++ b/blocks/footer/__row-link/footer__row-link.css
@@ -11,6 +11,10 @@
     color: #FFFFFF;
 }
 
+.footer__row-link:hover {
+    opacity: 0.8;
+}
+
 @media screen and (max-width: 767px){
     .footer__row-link {
     margin-top: 32px;
