--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,6 +1,12 @@
 .header__logo {
-    max-width: 100%;
+    max-width: 176px;
     height: auto;
     object-fit: cover;
-    display: flex;
+}
+
+@media screen and (max-width: 767px) {
+    .header__logo {
+    max-width: 142px;
+    height: auto;
+    }
 }
