--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -7,7 +7,13 @@
     text-align: start;
   }
 
-  
+  @media screen and (max-width: 1023px){
+    .place__title {
+    font-size: 42px;
+    line-height: 46px;
+}
+  }
+
   @media screen and (max-width: 767px){
     .place__title {
     font-size: 32px;
