--- a/blocks/header/__link/_lang/header__link-lang_ru.css
+++ b/blocks/header/__link/_lang/header__link-lang_ru.css
@@ -1,4 +1,4 @@
-.header__lang-link_ru {
+.header__link_lang_ru {
 font-size: 24px;
 line-height: 28px;
 font-style: normal;
@@ -8,13 +8,13 @@ text-decoration: none;
 margin-right: 16px;
 }
 
-.header__lang-link_ru:hover {
+.header__link_lang_ru:hover {
     opacity: 0.8;
     text-decoration: underline;
 }
 
 @media screen and (max-width: 767px){
-    .header__lang-link_ru {
+    .header__link_lang_ru{
     font-size: 18px;
     line-height: 20px;
     }
