--- a/blocks/header/__link/_lang/header__link_lang_en.css
+++ b/blocks/header/__link/_lang/header__link_lang_en.css
@@ -1,4 +1,4 @@
-.header__lang-link_en {
+.header__link_lang_en {
     font-size: 24px;
     line-height: 28px;
     font-style: normal;
@@ -7,13 +7,13 @@
     text-decoration: none;
     }
     
-    .header__lang-link_en:hover {
+    .header__link_lang_en:hover {
         opacity: 0.8;
         text-decoration: underline;
     }
     
     @media screen and (max-width: 767px){
-        .header__lang-link_en {
+        .header__link_lang_en {
         font-size: 18px;
         line-height: 20px;
         }
