--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,4 +1,4 @@
-.header__link_lang_en {
+.header__lang-link {
     font-size: 24px;
     line-height: 28px;
     font-style: normal;
@@ -7,13 +7,12 @@
     text-decoration: none;
     }
     
-    .header__link_lang_en:hover {
+    .header__lang-link:hover {
         opacity: 0.8;
-        text-decoration: underline;
     }
     
     @media screen and (max-width: 767px){
-        .header__link_lang_en {
+        .header__lang-link  {
         font-size: 18px;
         line-height: 20px;
         }
