--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -5,12 +5,12 @@
     text-align: center;
     margin: auto;
     margin-top: 32px;
-    max-width: calc(100% - 320px*2);
+    max-width: 640px;
 }
 
 @media screen and (max-width: 1279px){
   .lead__subtitle {
-    max-width: calc(100% - 192px*2);
+    max-width: calc(100% - 144px*2);
   }
 }
 
