--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -2,7 +2,7 @@
     background-color:#2A2C2F;
     color: #FFFFFF;
     min-width: 320px;
-    max-width: 2080px;
+    max-width: 100%;
     min-height: 100vh;
     font-family: 'Inter', Arial, sans-serif;
 }
