--- a/blocks/section/section.css
+++ b/blocks/section/section.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0 auto;
     padding: 28px 48px 24px;
+    max-width: 1280px;
   }
 
   @media screen and (max-width: 1023px){
